@@ -1,4 +1,11 @@
-2019-09-15 Philipp Klaus Krause <pkk AT spth.de>
+2019-09-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c,
+	  src/pdk/ralloc2.cc,
+	  src/pdk/peeph.def:
+	  Fixes for on-stack operands.
+
+2019-09-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/pdk/gen.c,
 	  src/pdk/ralloc2.cc:
